--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -28,7 +28,7 @@ body {
     justify-content: center;
 }
 
-.sliderBox__img{
+.sliderBox__img {
     max-width: 490px;
     max-height: 600px;
     border-radius: 32px;
@@ -57,14 +57,31 @@ body {
     color: #ffffff;
 }
 
+.formBox__passwordBox {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
 .inputBox__input {
     font-family: var(--font-family), serif;
     border: 1px solid #ede9e9;
-    color: #1c1b1f;
+    color: #e0e0e0;
     border-radius: 4px;
     font-weight: 400;
     font-size: 16px;
     padding: 8px 16px;
+    width: 100%;
+}
+
+.inputBox__img {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
 }
 
 .agreement__label {
@@ -137,7 +154,45 @@ body {
     gap: 15px;
 }
 
-.agreement__label{
+.agreement__label {
     display: flex;
     gap: 6px;
+}
+
+.formBox__loginAgreement {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.agreement__inputBox {
+    display: flex;
+    gap: 8px;
+}
+
+.popup {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    max-width: 500px;
+    transform: translate(-50%, -150%);
+    padding: 15px 20px;
+    background-color: #333;
+    color: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+    transition: .4s ease all;
+}
+
+.popup.success {
+    background-color: #28a745; /* Зеленый для успеха */
+    transform: translate(-50%, 0);
+    transition: .4s ease all;
+}
+
+.popup.error {
+    background-color: #dc3545; /* Красный для ошибки */
+    transform: translate(-50%, 0);
+    transition: .4s ease all;
 }
