--- a/src/main/webapp/css/reset.css
+++ b/src/main/webapp/css/reset.css
@@ -6,6 +6,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    transition: .4s ease all;
 }
 
 /* Reset typography */
